--- a/css/homepage.styl
+++ b/css/homepage.styl
@@ -100,7 +100,7 @@ section.homepage
                 top: -1rem
 
     &.links
-        height: 120px
+        height: 140px
 
         > a
             background: rgba($linksColour, 0.9)
